# MLOPS-76-Project

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  README.md  after_cleanup.txt  before_cleanup.txt  compare_lists.py  data.dvc  environment.yml  missing_packages.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.dvc/: config
.github/workflows/: lint-test.yml
data/preprocessed/: clean_data.csv
deploy/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
src/: __main__.py  api.py  data.py  dto.py
src/ml/: data.py  models.py  run.py  train.py
srcc/: data.py
tests/unit/: test_dummy.py
